fix(dashboard): #2750 remove horizontal scroll in dashboard (#2752)
* fix(dashboard): #2750 remove horizontal scroll in dashboard

* fix(dashboard): #2750 review comments

--- a/src/components/UserDashboard/UserDashboard.module.css
+++ b/src/components/UserDashboard/UserDashboard.module.css
@@ -1,3 +1,7 @@
+.dashboadRowContainer {
+  padding-bottom: 15px;
+}
+
 .userDashboardContainer {
   min-height: calc(100% - 56px);
   display: flex;
@@ -7,6 +11,8 @@
 }
 
 .userDashboardContent {
+  padding-left: 15px;
+  padding-right: 15px;
   width: 100%;
   min-height: 600px;
   background-color: #f4f5f8;
